scrollbar hidded in paragaph also fixed

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
   padding: 0;
 }
 
-::-webkit-scrollbar {
+body::-webkit-scrollbar {
   display: none;
 }
 
